# agentical

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  config_template.json  demo.sh  demo_anthropic.py  demo_gemini.py  demo_openai.py  llm_demo.py  mcp-demo.sh  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run-tests.sh  run_integration_tests.sh  run_tests.sh  test_anthropic.py  test_examples.sh  test_gemini.py  test_mcp_provider.py  test_openai.py
.cursor/rules/: README.md  index.md  leasons-learned.mdc  logging-rules.mdc  testing_rules.md
.github/workflows/: ci.yml  release.yml  tests.yml  tests.yml.bak
agentical/: __init__.py  _version.py  chat_client.py  logging_config.py
agentical/anthropic_backend/: anthropic_chat.py  schema_adapter.py
agentical/api/: configurer.py  llm_backend.py
agentical/core/: __init__.py  errors.py  executor.py  integration.py  provider.py  provider_config.py  provider_registry.py  registry.py  tool.py  types.py
agentical/gemini_backend/: gemini_chat.py  schema_adapter.py
agentical/mcp/: __init__.py  client.py  config.py  connection.py  file_configurer.py  health.py  prompt_registry.py  provider.py  resource_registry.py  schemas.py  tool_registry.py
agentical/openai_backend/: openai_chat.py
agentical/providers/: __init__.py  anthropic.py  default_provider_registry.py  formats.py  llm.py  openai.py
agentical/types/: __init__.py
agentical/utils/: log_utils.py
docs/: DOCUMENTATION_UPDATES.md  architecture.md  comprehensive-analysis.md  core-components.puml  mcp_client_analysis.md  mcp_protocol_alignment_plan.md  provider_architecture.md  refactoring_plan.md  system-lifecycles-detailed.md
docs/api/: README.md  configuration.md  core.md  error_handling.md  (+2 more)
examples/: __init__.py
experiment/: requirements.txt
server/: calculator_server.py  knowledge_graph.py  memory_server.py  schemas.py  weather_server.py
src/: client.py  test_provider.py
tests/: conftest.py  generate_weather_fixtures.py  test_calculator_server.py  test_chat_client.py  test_fs_server.py  test_knowledge_graph.py  test_logging_config.py  test_memory_server.py  test_terminal_server.py  test_weather_server.py
(+70 files in other folders)
